--- a/index.html
+++ b/index.html
@@ -206,22 +206,23 @@
                 </div>
                 <div class="content-prj">
                     <h3>E-Commerce Website</h3><br><br>
-                    <p>This is an e-commerce website built for a Pakistani fashion brand called Zar Using Woocommerce
+                    <p>This is an e-commerce website built for a Pakistani fashion brand called Zar, Using Woocommerce.
                     </p>
                     <a style="position: relative; padding: 5px 10px 5px 10px; color: #fff; bottom: -50px; background-color: black;"
                         href="https://zarthebrand-8ad332.ingress-earth.easywp.com/" target="_blank"> Check Live</a>
                 </div>
-                <div class="box-prj">
-                    <div class="imgbox">
-                        <img src="images/dandn.png" alt="">
-                    </div>
-                    <div class="content-prj">
-                        <h3>Day and Nigh Animation</h3><br><br>
-                        <p>This an animation which swithes the day on click 
-                        </p>
-                        <a style="position: relative; padding: 5px 10px 5px 10px; color: #fff; bottom: -50px; background-color: black;"
-                            href="https://yourazaa.github.io/dayandnight/" target="_blank"> Check Live</a>
-                    </div>
+            </div>
+            <div class="box-prj">
+                <div class="imgbox">
+                    <img src="images/dandn.png" alt="">
+                </div>
+                <div class="content-prj">
+                    <h3>Day and Night Animation</h3><br><br>
+                    <p>This animation is built using pure HTML, CSS and Javascript, Click on the Sun for night mode.
+                    </p>
+                    <a style="position: relative; padding: 5px 10px 5px 10px; color: #fff; bottom: -50px; background-color: black;"
+                        href="https://yourazaa.github.io/dayandnight/" target="_blank"> Check Live</a>
+                </div>
             </div>
             <div class="box-prj">
                 <div class="imgbox">
@@ -342,8 +343,8 @@
     </section>
 
     <!-- whatsapp -->
-    <a href="https://wa.me/919321166468" class="whatsapp_float" target="_blank"> <i
-        class="fa fa-whatsapp whatsapp-icon"></i></a>
+    <!-- <a href="https://wa.me/919321166468" class="whatsapp_float" target="_blank"> <i
+        class="fa fa-whatsapp whatsapp-icon"></i></a> -->
 
 
     <!-- footer section start -->
