--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <p>This is an e-commerce website built for a Pakistani fashion brand called Zar, Using Woocommerce.
                     </p>
                     <a style="position: relative; padding: 5px 10px 5px 10px; color: #fff; bottom: -50px; background-color: black;"
-                        href="https://zarthebrand-8ad332.ingress-earth.easywp.com/" target="_blank"> Check Live</a>
+                        href="https://zarthebrand.com/" target="_blank"> Check Live</a>
                 </div>
             </div>
             <div class="box-prj">
