--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         I have worked on many web-development projects, also built website's from scracth, you can check
                         my projects below
                     </p>
-                    <a href="downloadable file's/Mohammad Rizvi Resume..docx" download="">Download CV</a>
+                    <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
